prepare considering previous days by passing todays date to the appropriate functions